--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   shared_preferences: ^2.2.1
+  audioplayers: ^6.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
